# main

./: .gitignore  2010_dataset_event_count_report  Analyzer.cpp  AsymmetryFierzTerm.cc  BetaOctetPositions.cc  CalibratorExample.cpp  CombinedAbFit  DataScannerExample.cc  Doxyfile  Doxyfile.bak  ELOG_UCN_1.dsc  ExtractCombinedAbFit  ExtractCorrectBetaSpectrum.cc  ExtractFierzTerm.cc  MC_EventGen.cc  MWPC_Energy_Cal.cc  Makefile  MiscJunk.cc  OptQuadFitPts.cc  QuasiRandomTest.cc  README.md  UCNAnalyzer  condition-filenames.sh  quikscript.py
Analysis/: AnalysisDB.cc  AnalysisDB.hh  DataSource.cc  DataSource.hh  EfficCurve.cc  EfficCurve.hh  G4toPMT.cc  G4toPMT.hh  KurieFitter.cc  KurieFitter.hh  LED2PMT.cc  LED2PMT.hh  PMTGenerator.cc  PMTGenerator.hh  PeakTracker.cc  PeakTracker.hh  PenelopeToPMT.cc  PenelopeToPMT.hh  PostAnalyzer.cpp  PostAnalyzer.hh  PostOfficialAnalyzer.cc  PostOfficialAnalyzer.hh  ProcessedDataScanner.cpp  ProcessedDataScanner.hh  ReSource.cpp  ReSource.hh  RunSetScanner.cc  RunSetScanner.hh  Sim2PMT.cc  Sim2PMT.hh  TChainScanner.cpp  TChainScanner.hh  TH1toPMT.cc  TH1toPMT.hh
Aux/: AFP_Fieldmap.txt  Calibration_Plan_2011-2013.txt  CalibrationsDB Description.txt  Environment_Variables.txt  Fieldmap_20101028_b.txt  Fieldmap_20101028_b_xtra.txt  Fieldmap_20101121.txt  Fieldmap_20111217_good.txt  Fieldmap_20120216_bad.txt  ManualInfo.txt  OctetListMaker1112.py  OctetListMaker1213.py  OctetList_2010.txt  OctetList_20112012.txt  OctetList_20122013.txt  UCNA Run Log 2008.txt  UCNA Run Log 2012.txt  UCNA Run Log 2012_21274_21328.txt  UCNA Run Log 2012_21596_21605.txt  UCNA Run Log 2012_21927_21939.txt  UCNA Run Log 2012_BiPeaksCulled.txt  UCNA Run Log 2012_LEDculled.txt  UCNA Run Log 2012_LEDculled_test.txt  UCNA Run Log 2012_test.txt  UCNA Run Log Summary.txt  UCNA Run Log.txt  UniformFieldmap.txt  fierz-fit.txt  fierz-ratio.txt  monmonte_carlo_type_0_run_0_fierz.txt  monmonte_carlo_type_0_run_0_vector.txt
BaseTypes/: Enums.cc  Enums.hh  FloatErr.cc  FloatErr.hh  Octet.cc  Octet.hh  RunInfo.cc  RunInfo.hh  Source.cc  Source.hh  SourcesInfo.hh  SpectrumPeak.cc  SpectrumPeak.hh  TagCounter.cpp  TagCounter.hh  Types.cc  Types.hh  UCNAException.cc  UCNAException.hh
Calibration/: CalDB.hh  CalDBFake.hh  CalDBSQL.cc  CalDBSQL.hh  CathSegCalibrator.cc  CathSegCalibrator.hh  EfficCurve.cc  EfficCurve.hh  EnergyCalibrator.cc  EnergyCalibrator.hh  EventClassifier.cc  EventClassifier.hh  EvisConverter.cc  EvisConverter.hh  GainStabilizer.cc  GainStabilizer.hh  ManualInfo.cc  ManualInfo.hh  PMTCalibrator.cc  PMTCalibrator.hh  PositionResponse.cc  PositionResponse.hh  SourceDBSQL.cc  SourceDBSQL.hh  WirechamberCalibrator.cpp  WirechamberCalibrator.hh
DAQ/: Makefile  adccalib.c  adcsum.c  analyzer.c  analyzer.h  check_beta_decay.kumac  check_beta_decay_offline.kumac  check_pmts.kumac  check_ucn_monitors.kumac  experim.h  frontend.c  replay_bunch_of_runs.pl  scaler.c  tdccalib.c
Detectors/: BetaScint.cc  BetaScint.hh  CoTracker.cc  CoTracker.hh  Detector.cc  Detector.hh  EventParser.cc  EventParser.hh  LEDTracker.cc  LEDTracker.hh  MWPC.cc  MWPC.hh  MuonVeto.cc  MuonVeto.hh  RunManager.cpp  RunManager.hh  Subsystem.cc  Subsystem.hh  Trigger.cc  Trigger.hh  Wirechamber.cc  Wirechamber.hh  WirechamberReconstruction.cc  WirechamberReconstruction.hh
Examples/: CalibratorExample.cc  DataScannerExample.cc  ExtractCorrectBetaSpectrum.cc  FPNCalc.cc  FierzOctetAnalyzer.cc  FierzOctetAnalyzer.hh  MC_Comparisons.cc  MWPC_Efficiency_Sim.cc  OctetAnalyzerExample.cc  OctetAnalyzerExample.hh
Fierz/: AsymmetryFierzTerm.cc  CombinedAbFit.cc  CombinedNAbFit.cc  ExtractCombinedAbFit.cc  ExtractFierzTerm.cc  FierzFitter.cpp  FierzFitter.hh  csv2ttree.py  mc.root  ratio.root
IOUtils/: ControlMenu.cc  ControlMenu.hh  FPNCalc.cc  ManualInfo.cc  ManualInfo.hh  OutputManager.cpp  OutputManager.hh  PathUtils.cc  PathUtils.hh  QFile.cc  QFile.hh  RData.cc  RData.hh  SMExcept.cc  SMExcept.hh  strutils.cc  strutils.hh
MathUtils/: Bimap.hh  Interpolator.hh  RollingWindow.cc  RollingWindow.hh  SectorCutter.cc  (+1 more)
ucnG4_dev/: AnalyzerBase.cc  CMakeLists.txt  FindROOT.cmake  GNUmakefile  Makefile  Makefile.analyzer  README_for_g4sims.txt  SiDet_Analyzer.cc  SiDet_Analyzer.hh  UCNA_MC_Analyzer.cc  UCNA_MC_Analyzer.hh  analyzer.C  makeEvtLib.gmk  ucnG4_LinkDef.h  ucnG4_prod.cc
ucnG4_dev/include/: AnalysisManager.hh  AnalyzerBase.hh  BetaSpectrum.hh  DecayTrapConstruction.hh  DetectorConstruction.hh  DetectorConstructionUtils.hh  DetectorPackageConstruction.hh  EventAction.hh  Field.hh  FieldMessenger.hh  Livermore_EMPhysList.hh  MCEvent.hh  PhysList495.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  PrimaryInfo.hh  RunAction.hh  ScintillatorConstruction.hh  Sides.hh  SiliconDetectorConstruction.hh  SourceHolderConstruction.hh  SteppingAction.hh  SteppingVerbose.hh  SurfaceGenerator.hh  TrackInfo.hh  TrackerHit.hh  TrackerSD.hh  WiggleSheet.hh  WireVolumeConstruction.hh  WirechamberConstruction.hh  bmAnalysisManager.hh  bmDecayTrapConstruction.hh  bmDetectorConstruction.hh  bmDetectorConstructionUtils.hh  bmDetectorPackageConstruction.hh  bmEventAction.hh  bmField.hh  bmLivermore_EMPhysList.hh  bmMCEvent.hh  (+20 more)
ucnG4_dev/src/: AnalysisManager.cc  AnalyzerBase.cc  BetaSpectrum.cc  DecayTrapConstruction.cc  DetectorConstruction.cc  DetectorConstructionUtils.cc  DetectorPackageConstruction.cc  EventAction.cc  Field.cc  FieldMessenger.cc  MCEvent.cc  PhysList495.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  PrimaryInfo.cc  RunAction.cc  ScintillatorConstruction.cc  Sides.cc  SiliconDetectorConstruction.cc  SourceHolderConstruction.cc  SteppingAction.cc  SteppingVerbose.cc  SurfaceGenerator.cc  TrackInfo.cc  TrackerHit.cc  TrackerSD.cc  WiggleSheet.cc  WireVolumeConstruction.cc  WirechamberConstruction.cc  b_field.f  bmAnalysisManager.cc  bmDecayTrapConstruction.cc  bmDetectorConstruction.cc  bmDetectorConstructionUtils.cc  bmDetectorPackageConstruction.cc  bmEventAction.cc  bmField.cc  bmLivermore_EMPhysList.cc  bmMCEvent.cc  (+20 more)
(+656 files in other folders)
